[package]
name = "gtk-extras"
version = "0.2.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[dependencies]
cascade = "0.1"
cairo-rs = "0.8"
derive_more = "0.99"
gdk = "0.12"
gio = "0.8"
glib = "0.9"
gtk = { version = "0.8", features = ["v3_22"] }
itertools = "0.8"
log = "0.4"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", tag = "2.49.3" }
uuid = "0.8"
