[package]
name = "gtk-extras"
version = "0.3.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[dependencies]
cascade = "1.0"
cairo-rs = "0.14"
derive_more = "0.99"
gdk = "0.14"
gio = "0.14"
glib = "0.14"
gtk = { version = "0.14", features = ["v3_22"] }
itertools = "0.9"
log = "0.4"
uuid = "0.8"
